2006-06-23  Phil Muldoon  <pmuldoon@redhat.com>

	* ProcWiseDataModel.java (setRow): Add Null and Iter checks. Log
	failures and drop invalid iter.
	(searchName): Ditto.
	(ProcDestroyedObserver): Ditto.
	(ProcCreatedObserver): Ditto.
	(setSelected): Added null check.

2006-06-23  Rick Moseley  <rmoseley@redhat.com>

	* observers/ExitNotificationObserver.java:  Fix message typo.

2006-06-23  Chris Moller  <moller@mollerware.com>

	* ProcStatusWidget.java;
	* SessionProcTreeView.java:
	* StatusWidget.java:
	* TaskStatusWidget.java: First hack at combining the separate proc
	and task eventviewers into a single eventviewer.

2006-06-23  Phil Muldoon  <pmuldoon@redhat.com>

	* FilterRow.java (comboBoxEvent): Removed System.out commands.

	* observers/TaskObserverRoot.java (addFailed): Added in errorLog call. 
	Rewrap and throw core exception.
	* datamodels/FlatProcObservableLinkedList.java (ProcCreatedObserver): 
	Add more robust logging and failure case handling (ie log and fail return).
	(ProcDestroyedObserver): Ditto.

2006-06-22  Phil Muldoon  <pmuldoon@redhat.com>

	* actions/LogAction.java (execute): Remove
	System.out.println.

2006-06-22  Sami Wagiaalla  <swagiaal@redhat.com>

	* actions/ActionManager.java (initActionList): removed
	ShowSourceWindow ation and AddTaskObserver action.
	* actions/TaskActionPoint.java: Created a local list
	of applicable actions that is passed to the user when
	requested.
	* actions/PrintProc.java: Prints to the log window now.
	(execute): Added eventlog call.
	* actions/PrintTask.java: Ditto.
	(execute): Added eventlog call.

2006-06-21  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/TaskForkedObserver.java: Added log calls.
	* observers/ObserverRoot.java: Added code for saving/loading return
	action.
	Removed toString.
	* actions/GenericActionPoint.java: Added log calls.
	* StatusWidget.java: Removed AttachedObservers treeView.
	* LiaisonPoint.java: Removed toString.
	Added log calls.
	* GuiObject.java: Added toString.
